@@ -1,0 +1,10 @@
+<?php
+
+class Knowledgeroot_Db_Tag extends Knowledgeroot_Db_Table_Abstract
+{
+	protected $_name = 'tag';
+	protected $_primary = 'id';
+	protected $_sequence = 'seq_tag';
+}
+
+?>
