@@ -1,0 +1,10 @@
+<?php
+
+class Knowledgeroot_Db_Tag_Content extends Knowledgeroot_Db_Table_Abstract
+{
+	protected $_name = 'tag_content';
+	protected $_primary = 'id';
+	protected $_sequence = 'seq_tag_content';
+}
+
+?>
